# LS-CATNet

./: .gitignore  DATA_AVAILABILITY.md  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
configs/: iiitdmj.yaml  ustc.yaml
scripts/: audit_split_integrity.py  prepare_splits.py
src/lscatnet/: __init__.py  benchmark.py  count_params.py  data.py  evaluate.py  metrics.py  model.py  plots.py  predict.py  train.py  utils.py
