[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lscatnet"
version = "0.1.0"
description = "Reproducible PyTorch implementation of LS-CATNet for wildfire smoke-scene classification"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
    "numpy>=1.23.0",
    "pandas>=1.5.0",
    "scikit-learn>=1.2.0",
    "matplotlib>=3.7.0",
    "Pillow>=9.0.0",
    "tqdm>=4.64.0",
]

[tool.setuptools.packages.find]
where = ["src"]
